         to eliminate the 'CS_' prefix, as it's no longer needed due to
         class specification
      2) Slot parameters 'terrainElevReq', 'interpolateTerrain', 'positionFreeze',
         'altitudeFreeze', 'attitudeFreeze', 'fuelFreeze', 'crashOverride', killOverride',
         'killRemoval'' 'enableNetOutput' and 'testBodyAxis' now accepts a Boolean
      3) Removed slot parameter for initPosition with a base::List 

   RfSensor class
      1) Slot parameter 'trackManagerName' now accepts an Identifier
      2) Internally, this class now stores the track manager name as a
         std::string. Its API has been updated to set or get its name based on
         this type
      3) Slot parameter 'syncXmitWithScan' now accepts a Boolean

   RfSystem class
      1) Slot parameter 'antennaName' now accepts an Identifier
      2) Slot parameter 'disableEmissions' now accepts a Boolean
      3) Fixed bug in setSlotFrequency() in that it was dynamically casting a
         Frequency provided input value into a Frequency value.  If the cast failed
         (which is impossible), then treat the value as if it is a Number - which
         it can't be.

   Route class
      1) Slot parameters 'autoSequence' and 'wrap' now accepts a Boolean

   ScanGimbal class
      1) Enumerated type 'Side' is now an 'enum class'
      2) The anonymous enumerated list of scan modes has been replaced by a
         'enum class' that defines a ScanMode
      3) Slot parameter 'scanMode' now accepts an Identifier
      4) Slot parameter 'leftToRightScan' now accept a Boolean

   SigAzEl class
      1) Slot parameters 'swapOrder', 'inDegrees' and 'inDecibel' now accepts
         a Boolean

   TargetData class
      1) Slot parameters 'enabled', 'completed' and 'manualAssign' now accepts
         a Boolean

   TrackManager class
      1) Slot parameter 'logTrackUpdates' now accepts a Boolean

   WorldModel class
      1) Slot parameter 'gamingAreaUseEarthModel' now accepts a Boolean
